--- a/Diabetes.ipynb
+++ b/Diabetes.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 60,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-12-26T04:34:43.931935Z",
-     "start_time": "2023-12-26T04:34:43.925136Z"
+     "end_time": "2023-12-26T05:11:25.590285Z",
+     "start_time": "2023-12-26T05:11:25.580013Z"
     }
    },
    "outputs": [],
@@ -17,9 +17,10 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier, RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix\n",
-    "from sklearn.utils import compute_class_weight"
+    "from sklearn.utils.class_weight import compute_class_weight\n",
+    "from xgboost import XGBClassifier"
    ]
   },
   {
@@ -469,7 +470,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Below, I chose to do random forest as my ML algorithm. I Split the data into training and testing; 20% test, 80% train"
+    "Below, I chose to do gradient boost, random forest, XGboost as my ML algorithms to see which performs the best. I Split the data into training and testing; 20% test, 80% train"
    ],
    "metadata": {
     "collapsed": false
@@ -478,17 +479,7 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "RandomForestClassifier(class_weight='balanced', random_state=42)",
-      "text/html": "<style>#sk-container-id-3 {color: black;}#sk-container-id-3 pre{padding: 0;}#sk-container-id-3 div.sk-toggleable {background-color: white;}#sk-container-id-3 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-3 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-3 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-3 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-3 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-3 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-3 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-3 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-3 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-3 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-3 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-3 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-3 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-3 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-3 div.sk-item {position: relative;z-index: 1;}#sk-container-id-3 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-3 div.sk-item::before, #sk-container-id-3 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-3 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-3 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-3 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-3 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-3 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-3 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-3 div.sk-label-container {text-align: center;}#sk-container-id-3 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-3 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-3\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier(class_weight=&#x27;balanced&#x27;, random_state=42)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" checked><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(class_weight=&#x27;balanced&#x27;, random_state=42)</pre></div></div></div></div></div>"
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X = df[['gender', 'age', 'hypertension', 'heart_disease', 'smoking_history', 'bmi', 'HbA1c_level', 'blood_glucose_level']]\n",
     "y = df['diabetes']\n",
@@ -497,40 +488,40 @@
     "\n",
     "df['binary_smoking_history'] = df['smoking_history'].apply(lambda x: 0 if x in ['no info', 'not current', 'never'] else 1) # binary labels for smoking history to use in class weights\n",
     "\n",
-    "# create and fit model\n",
+    "# class weights \n",
+    "class_weights = compute_class_weight('balanced', classes=[0, 1], y=y_train)\n",
+    "sample_weights = class_weights[y_train.astype(int)]\n",
+    "\n",
+    "# gradient boost\n",
+    "gb_model = GradientBoostingClassifier(random_state=42)\n",
+    "gb_model.fit(X_train, y_train, sample_weight=sample_weights)\n",
+    "gb_pred = gb_model.predict(X_test) # predictions\n",
+    "gb_cf = confusion_matrix(y_test, gb_pred)\n",
+    "gb_accuracy = accuracy_score(y_test, gb_pred)\n",
+    "\n",
+    "# random forest\n",
     "rf_model = RandomForestClassifier(random_state=42, class_weight='balanced')\n",
-    "rf_model.fit(X_train, y_train)\n"
+    "rf_model.fit(X_train, y_train)\n",
+    "rf_pred = rf_model.predict(X_test) # predictions\n",
+    "rf_cf = confusion_matrix(y_test, rf_pred)\n",
+    "rf_accuracy = accuracy_score(y_test, rf_pred)\n",
+    "\n",
+    "#XGBoost \n",
+    "xgb_model = XGBClassifier(random_state=42, scale_pos_weight=(y_train == 0).sum() / (y_train == 1).sum(), enable_categorical=True)\n",
+    "xgb_model.fit(X_train, y_train)\n",
+    "xgb_pred = xgb_model.predict(X_test)\n",
+    "xgb_cf = confusion_matrix(y_test,xgb_pred)\n",
+    "xgb_accuracy = accuracy_score(y_test,xgb_pred)\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-26T04:36:48.379760Z",
-     "start_time": "2023-12-26T04:36:45.659182Z"
+     "end_time": "2023-12-26T05:15:29.122562Z",
+     "start_time": "2023-12-26T05:15:21.886430Z"
     }
    },
    "id": "5cf68f0dfd0f334a",
-   "execution_count": 51
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "# predictions\n",
-    "y_pred = rf_model.predict(X_test)\n",
-    "# check goodness of fit\n",
-    "accuracy = accuracy_score(y_test, y_pred)\n",
-    "# confusion matrix\n",
-    "rf_cf = confusion_matrix(y_test, y_pred)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-26T04:36:51.723635Z",
-     "start_time": "2023-12-26T04:36:51.559459Z"
-    }
-   },
-   "id": "62ecce7ab60987d",
-   "execution_count": 52
+   "execution_count": 62
   },
   {
    "cell_type": "code",
@@ -539,32 +530,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.97\n",
-      "Confusion Matrix: \n",
+      "Gradient Boosting Classifier:\n",
+      "Confusion Matrix:\n",
+      "[[16448  1844]\n",
+      " [  125  1583]]\n",
+      "Accuracy: 0.90\n",
+      "\n",
+      "Random Forest Classifier:\n",
+      "Confusion Matrix:\n",
       "[[18216    76]\n",
-      " [  536  1172]]\n"
+      " [  536  1172]]\n",
+      "Accuracy: 0.97\n",
+      "\n",
+      "XGBoost Classifier:\n",
+      "Confusion Matrix:\n",
+      "[[16908  1384]\n",
+      " [  211  1497]]\n",
+      "Accuracy: 0.92\n"
      ]
     }
    ],
    "source": [
-    "print(f'Accuracy: {accuracy:.2f}')\n",
-    "print(f'Confusion Matrix: \\n{rf_cf}')"
+    "print(\"Gradient Boosting Classifier:\")\n",
+    "print(f\"Confusion Matrix:\\n{gb_cf}\")\n",
+    "print(f\"Accuracy: {gb_accuracy:.2f}\")\n",
+    "\n",
+    "print(\"\\nRandom Forest Classifier:\")\n",
+    "print(f\"Confusion Matrix:\\n{rf_cf}\")\n",
+    "print(f\"Accuracy: {rf_accuracy:.2f}\")\n",
+    "\n",
+    "print(\"\\nXGBoost Classifier:\")\n",
+    "print(f\"Confusion Matrix:\\n{xgb_cf}\")\n",
+    "print(f\"Accuracy: {xgb_accuracy:.2f}\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-26T04:36:53.188518Z",
-     "start_time": "2023-12-26T04:36:53.184052Z"
+     "end_time": "2023-12-26T05:17:00.105779Z",
+     "start_time": "2023-12-26T05:17:00.079828Z"
     }
    },
    "id": "616386e69fd02b5",
-   "execution_count": 53
+   "execution_count": 63
   },
   {
    "cell_type": "markdown",
    "source": [
-    "The model  is performing well with a high accuracy of 97%. The confusion matrix shows the number of true positives, true negatives, false positives, and false negatives. \n",
-    "The model correctly predicted 1172 cases of diabetes (positive class) and 18216 cases of non-diabetes (negative class). There were 76 cases where the model incorrectly predicted diabetes when it was not present, and 536 cases where it incorrectly predicted non-diabetes when diabetes was present.\n"
+    "Random Forest achieved the highest accuracy of 97%. The model correctly predicted 1172 cases of diabetes (positive class) and 18216 cases of non-diabetes (negative class). There were 76 cases where the model incorrectly predicted diabetes when it was not present, and 536 cases where it incorrectly predicted non-diabetes when diabetes was present. Successfully identifying a high number of true positives and true negatives.\n",
+    "\n",
+    "XGBoost had a good performance with an accuracy score of 92%. The model correctly predicted 1497 cases of diabetes (positive class) and 16908 cases of non-diabetes (negative class). There were 1384 cases where the model incorrectly predicted diabetes when it was not present, and 211 cases where it incorrectly predicted non-diabetes when diabetes was present. It showed a between true positives and true negatives, with some false positives and false negatives.\n",
+    "\n",
+    "Gradient Boost achieved an accuracy of 90%. The model correctly predicted 1583 cases of diabetes (positive class) and 16448 cases of non-diabetes (negative class). There were 1844 cases where the model incorrectly predicted diabetes when it was not present, and 125 cases where it incorrectly predicted non-diabetes when diabetes was present. The model showed good sensitivity (true positives), but had a higher number of false positives compared to the other models. \n",
+    "\n",
+    "Conclusion: Random Forest is the best performing model out of the 3, based on accuracy. \n"
    ],
    "metadata": {
     "collapsed": false
